--- a/doc/report.tex
+++ b/doc/report.tex
@@ -33,11 +33,11 @@
 \begin{document}
 \maketitle  
 \setcounter{page}{2}
-%\tableofcontents
+\tableofcontents
 \clearpage
 \renewcommand\thepage{\arabic{page}}
 \pagestyle{plain}
 \input{task1}
 \input{task2}
-%\input{part3}
-\end{document}          
+\input{task3}
+\end{document}
