--- a/doc/task1.tex
+++ b/doc/task1.tex
@@ -38,11 +38,11 @@ $$
 
 \subsection{Энтропия источника}
 
-\subsubsection{$\mathbf{H(X)}$}
+\subsubsection{$H(X)$}
 Энтропия источника вычисляется по формуле $$H(X) = -\sum\limits_{i = 1} ^{3} p_i\log{p_i}$$ и равна: 
 $H(X) = -\frac{3}{8}\log{\frac{3}{8}} - \frac{1}{4}\log{\frac{1}{4}} - \frac{3}{8}\log{\frac{3}{8}} = \frac{1}{4} \cdot \left( 11 - 3\log{3}\right) = 1.561.$
 
-\subsubsection{$\mathbf{H(X|X^{\infty})}$}
+\subsubsection{$H(X|X^{\infty})$}
 Полагаем, что заданный марковский источник связности 1.
 Тогда: $$H(X|X^{\infty}) = H(X|X)$$
 По определению условной энтропии: $$H(X|X)= \sum\limits_{i=1}^{3}{p_{i}{H(X|p_{i})}} = -\sum\limits_{i=1}^{3}{p_{i}\sum\limits_{j=1}^{3}{\pi_{ij}\log{\pi_{ij}}}}$$
@@ -50,7 +50,7 @@ $H(X) = -\frac{3}{8}\log{\frac{3}{8}} - \frac{1}{4}\log{\frac{1}{4}} - \frac{3}{
 \frac{1}{4}(\frac{1}{4}\log{\frac{1}{4}} + \frac{3}{4}\log{\frac{3}{4}}) +
 \frac{3}{8}(\frac{1}{4}\log{\frac{1}{4}} + \frac{1}{4}\log{\frac{1}{4}} + \frac{1}{2}\log{\frac{1}{2}})) = \frac{29}{16} - \frac{15}{32}\log{3} = 1.07$.
 
-\subsubsection{$\mathbf{H_{2}(X)}$ и $\mathbf{H_{n}(X)}$}
+\subsubsection{$H_{2}(X)$ и $H_{n}(X)$}
 По определению: $$H_{n}(X) = \frac{H(X^n)}{n}$$
 По свойству 3 условной энтропии: $$H(X^n) = H(X) + H(X|X) + \ldots +H(X|X^{n - 1})$$
 Учитывая марковость и стационарность источника, получаем:
@@ -61,7 +61,7 @@ $$H_{n}(X) = \frac{H(X) + (n - 1)H(X|X)}{n} = H(X|X) + \frac{1}{n}(H(X) - H(X|X)
 
 \subsection{Коды Хаффмена}
 
-\subsubsection{Код Хаффмена для $\mathbf{X}$}
+\subsubsection{Код Хаффмена для $X$}
 Построим код Хаффмена для $X$:
 
 $$
@@ -83,7 +83,7 @@ $$
 
 Посчитаем избыточность: $ r = \overline{R} - H(X|X^{\infty}) = 1.625 - 1.07 = 0.555$ 
 
-\subsubsection{Код Хаффмена для $\mathbf{X^2}$}
+\subsubsection{Код Хаффмена для $X^2$}
 Построим код Хаффмена для $X^2$:
 $$
 \begin{tikzpicture}[frontier/.style={distance from root=350}, grow'=left]
